# kl-exec-poc

./: .gitignore  .idea  README.md  pyproject.toml
config/: operations.json
src/kl_exec_poc/: __init__.py  __main__.py  cli.py  orchestrator.py  registry.py
src/kl_exec_poc/adapters/: __init__.py  kl_bridge.py  llm_stub.py
src/kl_exec_poc/config/: __init__.py  loader.py  schemas.py
src/kl_exec_poc/examples/: __init__.py  simple_chain.py
tests/: test_cli.py  test_config_loader.py  test_orchestrator_flow.py  test_registry.py
